# hebcal-rs

./: Cargo.toml  README.md
examples/: shabbat.rs
src/: error.rs  lib.rs  shabbat.rs
src/shabbat/: options.rs  response.rs
