[package]
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
edition = "2018"
name = "hebcal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = {version = "0.4.16", features = ["serde"]}
# chrono-tz = "0.5"
reqwest = {version = "0.10", features = ["json"]}
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
tokio = {version = "0.2", features = ["full"]}
url = {version = "2.1.1", features = ["serde"]}
