[package]
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
description = "A hebcal.com REST API Client"
edition = "2018"
homepage = "https://github.com/joshrotenberg/hebcal-rs"
license = "MIT/Apache-2.0"
name = "hebcal"
readme = "README.md"
repository = "https://github.com/joshrotenberg/hebcal-rs.git"
version = "0.1.0"
documentation = "https://docs.rs/hebcal"

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
reqwest = {version = "0.10", features = ["json"]}
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.59"
thiserror = "1.0"
url = {version = "2.1.1", features = ["serde"]}

[dev-dependencies]
anyhow = "1.0.33"
tokio = {version = "0.2.22", features = ["full"]}
